--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
+    "zone.js": "0.8.12",
+    "tslint-config-airbnb": "^5.2.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
